--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>心歌文件管理系统</title>
+    <title>郑方行文件管理系统</title>
     <meta charset="UTF-8">
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="cache-control" content="no-cache">
@@ -86,7 +86,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" style="color:#FFFFFF" >心歌文件管理系统 v1.0</a>
+            <a class="navbar-brand" href="#" style="color:#FFFFFF" >郑方行文件管理系统 v1.0</a>
         </div>
         <!-- /.navbar-header -->
         <ul class="nav navbar-top-links navbar-right">
@@ -283,7 +283,7 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     <!--<img alt="image" style="max-width:20px" class="img-circle" src="#">-->
-                    <span style="max-width:20px;color: white;"  class="img-circle" >王哈哈</span>
+                    <span style="max-width:20px;color: white;"  class="img-circle" >郑方行</span>
                     <i class="fa fa-user fa-fw" style="color:#FFFFFF" ></i> <i class="fa fa-caret-down" style="color:#FFFFFF" ></i>
                 </a>
                 <ul class="dropdown-menu dropdown-user">
@@ -319,7 +319,7 @@
                     </li>
 
                     <li>
-                        <a href="../siglepage/peisonpage.jsp" target="_blank" ><i class="fa fa-dashboard fa-fw"></i> 进入心歌官网</a>
+                        <a href="../siglepage/peisonpage.jsp" target="_blank" ><i class="fa fa-dashboard fa-fw"></i> 进入郑方行博客</a>
                     </li>
                     <!-- <i class="fa fa-bar-chart-o fa-fw"></i>柱形图图片 -->
                     <li>
@@ -379,7 +379,7 @@
                     <div class="row">
 
                         <div class="col-lg-12">
-                            <h1 class="page-header">欢迎进入心歌文件管理系统</h1>
+                            <h1 class="page-header">欢迎进入郑方行文件管理系统</h1>
                         </div>
                         <!-- /.col-lg-12 -->
                     </div>
